# hndb-desktop

./: latest.json  package-lock.json  package.json  vite.config.ts
src/: globals.css  main.tsx  routes.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: apply_changeset.rs  connect_session.rs  delete_connection.rs  disconnect_connection.rs  execute_query.rs  get_table_preview.rs  get_table_schema.rs  invalidate_connection.rs  list_connection_statuses.rs  list_connections.rs  list_databases.rs  list_tables.rs  mod.rs  rename_connection.rs  reset_connection_sessions.rs  save_and_connect.rs  test_and_probe.rs  update_connection.rs  validate_setting_overrides.rs
src-tauri/src/db_client/: changeset.rs  connection.rs  fetch_advanced_settings.rs  fetch_server_version.rs  list_databases.rs  list_tables.rs  mod.rs  mssql.rs  run_sql.rs
src-tauri/src/helpers/: build_conn_str.rs  connection_access.rs  get_config_by_id.rs  mod.rs  override_database.rs  saved_connections_store.rs  vault_password.rs
src-tauri/src/types/: changeset.rs  connection_config.rs  connection_mode.rs  db_setting.rs  mod.rs  saved_connection.rs  table_column.rs  table_preview_result.rs  test_connection_result.rs
src/components/: BetaAnnouncementModal.tsx  MockDataNotice.tsx
src/config/: api.ts
src/constants/: index.ts  supportConnections.ts  supportDataSources.ts
src/helpers/: index.ts  sqlToken.ts
src/hooks/: index.ts  useAction.tsx  useActiveTab.tsx  (+7 more)
(+124 files in other folders)
