[package]
name = "hndb"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hndb_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-deep-link = "2"
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "postgres",
  "mysql",
  "sqlite",
  "chrono",
  "json",
] }
tokio = { version = "1", features = ["full"] }
tiberius = "0.12"
tokio-util = { version = "0.7", features = ["compat"] }
url = "2"
tauri-plugin-stronghold = "2"
iota_stronghold = "2.1.0"
rand = "0.10.0"
keyring = { version = "3.6.3", features = [
  "apple-native",
  "windows-native",
  "linux-native-sync-persistent",
  "crypto-rust",
] }
sea-query = { version = "0.32.7", features = ["backend-mysql", "backend-postgres", "backend-sqlite"] }
sea-query-binder = { version = "0.7.0", features = ["sqlx-postgres", "sqlx-mysql", "sqlx-sqlite"] }

# single-instance chỉ cần trên desktop, không dùng trên mobile
[target."cfg(any(target_os = \"macos\", windows, target_os = \"linux\"))".dependencies]
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }

[profile.dev.package.scrypt]
opt-level = 3
